grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/subnets: subnet-0ff73ca9c1b7d0f1d, subnet-0ca9982b65a6fc4dd, subnet-0b4f06140976d8353
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
        - backend:
            service:
              name: grafana
              port:
                number: 80
          path: /
          pathType: Prefix
